--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   flutter_floating: ^1.0.8
   flutter_spinkit: ^5.2.1
+  video_player: ^2.8.6 # 替换为实际的最新版本号
+
 
 
   # The following adds the Cupertino Icons font to your application.
