--- a/android/app/src/profile/AndroidManifest.xml
+++ b/android/app/src/profile/AndroidManifest.xml
@@ -5,3 +5,9 @@
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
+<application
+android:label="Shot"
+    android:hardwareAccelerated="false">
+    <!-- other configurations -->
+</application>
+<uses-permission android:name="android.permission.INTERNET"/>
