--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
   flutter_floating: ^1.0.8
   flutter_spinkit: ^5.2.1
-  video_player: ^2.8.6 # 替换为实际的最新版本号
+  video_player: ^2.8.7 # 替换为实际的最新版本号
+  #video_player_avfoundation: ^2.6.1 # 替换为实际的最新版本号÷
   material_design_icons_flutter: ^7.0.7296
 
 
